samples/_failures_safe/1761004848_911683_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec674788.c: In function ‘main’:
./samples/SAFE/__tmp_ec674788.c:173:5: error: expected expression at end of input
  173 |     int col =
      |     ^~~
./samples/SAFE/__tmp_ec674788.c:173:5: error: expected declaration or statement at end of input
